--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -416,7 +416,7 @@ figure.effect-honey:hover h2 i {
 
 #contact {
   color: white;
-  background-image: url(../img/the-town-bg-02.jpg);
+  background-image: url(../img/glass.jpg);
   background-position: center;
   background-repeat: no-repeat;
   min-height: 850px;
