--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -180,6 +180,10 @@ a:focus {
   text-shadow: 2px 2px 2px #333;
 }
 
+.contingency-shadow {
+  text-shadow: 2px 2px 2px #333;
+}
+
 .tm-intro-next {
   position: absolute;
   bottom: 100px;
