--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -421,6 +421,7 @@ figure.effect-honey:hover h2 i {
 #contact {
   color: white;
   background-image: url(../img/glass2.jpg);
+  background-color: black;
   background-position: center;
   background-repeat: no-repeat;
   min-height: 850px;
